# rtl-pulse

./: .gitignore  ARCHITECTURE.md  FIRST_RUN.md  README.md  install.sh
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  audio_manager.py  config.py  database.py  main.py  models.py  mqtt_client.py  protocols.py  rtl_manager.py  spectrum_manager.py  websocket.py
backend/app/routers/: __init__.py  audio.py  devices.py  sensors.py  signals.py  spectrum.py  system.py
claudedocs/: audio-receiver-feature.md  protocol-configuration-feature.md
config/: 99-rtl-sdr.rules  mosquitto.conf  rtl_433.conf
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: FlagsConfig.tsx  FrequencyTuner.tsx  LiveChart.tsx  ProtocolSelector.tsx  SensorCard.tsx  StatusBar.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/pages/: Configuration.tsx  ConsoleLogs.tsx  Dashboard.tsx  Decoding.tsx  Devices.tsx  History.tsx  Settings.tsx  Signals.tsx  SpectrumScanner.tsx
dashboard/src/services/: api.ts
dashboard/src/types/: index.ts
scripts/: build_rtl433.sh  setup.sh  start.sh  status.sh  stop.sh
signal-analyzer/: index.html  package-lock.json  package.json  vite.config.ts
signal-analyzer/src/: App.vue  main.ts  style.css
signal-analyzer/src/composables/: useSignalData.ts
signal-analyzer/src/views/: Analyzer.vue  AudioPlayer.vue  Decoder.vue  Explorer.vue
